# apologetics-catalog

./: .gitignore  README.md  apologetics.yaml  pyproject.toml
.github/workflows/: pages.yml
content/questions/christology/created-being/: arguments.yaml  assumptions.yaml  claims.yaml  evidence.yaml  interpretations.yaml  positions.yaml  question.yaml  relationships.yaml  sources.yaml
docs/design/: 00-intro.md  01-core-philosophy.md  02-architecture.md  03-core-data-model.md  04-relationships-and-arguments.md  05-provenance-and-quotation.md  06-validation-and-compilation.md  07-outputs-and-cli.md  08-initial-scope.md  09-v0.1-schema.md  10-vocabularies.md  11-modeling-guidelines.md  12-id-conventions.md  13-project-manifest.md  14-scripture-sources.md  15-position-attribution.md  16-bibliography-sources.md  17-provenance-conventions.md  18-first-topic-modeling-plan.md  19-web-ui-reasoning-browser.md  20-descendant-response-discovery.md  21-path-links.md
src/apologetics_catalog/: __init__.py  catalog.py  cli.py  diagnostics.py  show.py  validator.py  web.py  yaml_loader.py
src/apologetics_catalog/web_static/: __init__.py  app.js  index.html  style.css
tests/: test_validate.py
