[project]
name = "apologetics-catalog"
version = "0.1.0"
description = "A neutral catalog and compiler for structured apologetics viewpoints."
readme = "README.md"
authors = [
    { name = "dharmatech", email = "wayo.cavazos@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2,<3",
    "rich>=15.0.0",
    "ruamel-yaml>=0.18,<0.20",
    "typer>=0.26.7",
]

[project.scripts]
apologetics-catalog = "apologetics_catalog:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
